--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
   "dependencies": {
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "next": "16.0.1"
+    "next": "16.0.1",
+    "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.23.24",
+    "keen-slider": "^6.8.6",
+    "next": "15.5.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.66.0",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -20,3 +29,4 @@
     "eslint-config-next": "16.0.1"
   }
 }
+
