--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "next": "16.0.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.23.24",
     "keen-slider": "^6.8.6",
@@ -20,13 +17,13 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
     "react-hot-toast": "^2.6.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1"
+    "eslint-config-next": "16.0.1",
+    "tailwindcss": "^4"
   }
 }
-
